@startuml
title Reply Review - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class User <<model>> {
  -id: String {UUID}
  -employerPartnerId: String [0..1]
  -email: String {unique}
  -status: UserStatus = ACTIVE
  --
  +isVerified(): Boolean
  +isActive(): Boolean
}

class PartnerProfile <<model>> {
  -id: String {UUID}
  -userId: String {unique}
  -kycConsentAccepted: Boolean = false
  -status: PartnerStatus = PENDING
  --
  +isApproved(): Boolean
}

class Review <<model>> {
  -id: String {UUID}
  -userId: String
  -attractionId: String
  -rating: Int
  -replyComment: String [0..1]
  -repliedAt: DateTime [0..1]
  --
  +reply(replyComment: String, at: DateTime): void
  +isVisible(): Boolean
  +isAuthoredBy(userId: String): Boolean
}

class Attraction <<model>> {
  -id: String {UUID}
  -partnerId: String
  -title: String
  -status: AttractionStatus = DRAFT
  --
  +isPublished(): Boolean
}

PartnerProfile "0..1" -- "0..*" User : staffMembers
User "1" *-- "0..1" PartnerProfile : partnerProfile
User "1" -- "0..*" Review : reviews
Attraction "1" -- "0..*" Review : reviews
PartnerProfile "1" -- "0..*" Attraction : attractions

@enduml
